--- a/styles/components/_history-diteal.scss
+++ b/styles/components/_history-diteal.scss
@@ -13,6 +13,7 @@
     &__header--buttons {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         width: 100%;
     }
 
@@ -22,19 +23,33 @@
     }
 
     &__header--num {
-        font-size: 2rem;
+        font-size: 22px;
         font-weight: 900;
     }
 
     &__delete-btn {
         background-color: rgb(240, 241, 245);
+        width: 27rem;
+        height: 5rem;
 
         & span {
             color: #5c596a;
+            font-size: 16px;
         }
 
         &:hover {
             background-color: #c2c2c2;
+        }
+    }
+
+    &__header--description {
+        line-height: 4rem;
+        margin: 6rem 0;
+
+        span {
+            color: #626161;
+            font-size: 16px;
+            margin-left: 2rem;
         }
     }
 
@@ -46,27 +61,10 @@
         }
     }
 
-    &__list {
-        & li {
-            font-size: 1.6rem;
-            margin-right: 1rem;
-            line-height: 3rem;
-        }
 
-        & span {
-            color: #626161;
-        }
 
-        &.cost {
-            & li {
-                font-size: 1.8rem;
-                font-weight: 900;
-            }
-
-            & span {
-                color: #000;
-            }
-        }
+    &__list-header {
+        display: flex;
     }
 
     &__table {
@@ -164,16 +162,45 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        min-height: 18rem;
+        min-height: 26rem;
+
+        span {
+            font-size: 16px;
+        }
 
         button {
-            width: 16rem;
+            width: 27rem;
+            height: 5rem;
         }
     }
+
+    &__footer--content .cost {
+
+        span {
+            font-size: 18px;
+        }
+
+    }
+
 }
 
 @media screen and (max-width:480px) {
     .history-diteal {
+
+        &__delete-btn {
+            width: 104px !important;
+            height: 45px;
+            padding: 0;
+
+            span {
+                font-size: 14px;
+                width: 100%;
+            }
+
+            &:hover {
+                background-color: #c2c2c2;
+            }
+        }
 
         & table {
             & td {
@@ -189,21 +216,64 @@
             min-height: 30rem;
         }
 
+        &__header--description {
+            line-height: 4rem;
+            margin: 6rem 0;
+
+            span {
+
+                font-size: 14px;
+
+            }
+        }
+
         &__footer {
             margin-bottom: 5rem;
         }
 
+        &__list {
+            display: flex;
+            justify-content: space-between;
+            width: 70%;
+        }
+
         &__footer--content {
-            min-height: 22rem;
+
+            min-height: 40rem;
+
+            span {
+                font-size: 12px;
+                line-height: 4rem;
+            }
 
             button {
                 width: 100%;
+                height: 45px;
                 justify-content: center;
             }
         }
 
+        &__footer--content .cost {
+            span {
+                font-size: 16px;
+
+            }
+
+            button {
+                width: 100%;
+                height: 45px;
+                justify-content: center;
+            }
+        }
+
+        &__header--num {
+            font-size: 14px;
+            font-weight: 900;
+        }
+
         &__product {
-            height: 20rem;
+            min-height: 20rem;
         }
     }
+
 }
