--- a/styles/components/_shoping-cart.scss
+++ b/styles/components/_shoping-cart.scss
@@ -75,7 +75,7 @@
         justify-content: space-between;
         min-width: 30rem;
         margin-bottom: 2rem;
-       
+
 
         p {
             font-size: 1.4rem;
@@ -85,6 +85,7 @@
 
     &__cost {
         display: flex;
+
         justify-content: space-between;
 
         p {
@@ -92,9 +93,10 @@
             font-weight: bold;
         }
     }
+
     &__delete-icon {
-       stroke: #222222;
-       opacity: 0.6;
+        stroke: #222222;
+        opacity: 0.6;
     }
 }
 
@@ -151,26 +153,32 @@
             display: flex;
             flex-direction: column;
             width: 100%;
+            min-height: 33rem;
 
             button {
                 min-width: 100%;
                 height: 45px;
-                font-size: 12px;
+
+                span {
+                    font-size: 16px;
+                }
             }
         }
 
         &__list {
 
             p {
-                font-size: 10px;
-                margin-bottom: 1rem;
+                font-size: 14px;
+                margin-bottom: 2rem;
             }
         }
 
         &__cost {
 
+            width: 72%;
+
             p {
-                font-size: 12px;
+                font-size: 16px;
                 font-weight: bold;
             }
         }
