--- a/styles/main.css
+++ b/styles/main.css
@@ -4604,6 +4604,10 @@ input {
   width: 100%;
 }
 
+.account {
+  margin-bottom: 5rem;
+}
+
 .account__form-wrapp {
   max-width: 1019px;
 }
@@ -5069,6 +5073,11 @@ input {
   display: flex;
   gap: 2rem;
   margin: 4rem 0;
+}
+
+.account__save-btn {
+  width: 200px;
+  height: 50px;
 }
 
 .account_password-icon {
@@ -9750,6 +9759,10 @@ input {
   .catalog__brand-text:last-child {
     display: none;
   }
+}
+
+.registration {
+  margin-bottom: 5rem;
 }
 
 .registration__nav-link {
