--- a/styles/main.scss
+++ b/styles/main.scss
@@ -109,7 +109,12 @@
 // brand inside page
 
 @import "../styles/components/brand-inside";
+
 // registration page
 
-@import "../styles/components/registration"
+@import "../styles/components/registration";
+
+// registration page
+
+@import "../styles/components/stock";
 
