--- a/styles/main.css
+++ b/styles/main.css
@@ -9893,4 +9893,86 @@ input {
 .stock__nav {
   width: 17rem;
 }
+
+.search-empty__nav {
+  width: 23rem;
+}
+
+.search-empty__line {
+  width: 100%;
+  height: 1px;
+  background: #d2d2d2;
+  margin: 5rem 0 10rem 0;
+}
+
+.search-empty__title {
+  font-size: 56px;
+  font-weight: bold;
+}
+
+.search-empty__text {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.search-empty__text--green {
+  color: #10AE73;
+}
+
+.search-empty__input-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin: 4rem 0 14rem 0;
+}
+
+.search-empty__input-block img {
+  position: absolute;
+  left: 2.5rem;
+  top: 30%;
+}
+
+.search-empty__input-block input {
+  width: 90rem;
+  border-radius: 32px;
+  font-size: 16px;
+  color: #5C596A;
+  height: 50px;
+  background: #EFF1F5;
+  padding-left: 6.5rem;
+}
+
+.search-empty__input-block input:hover {
+  background: #cfd0d7;
+}
+
+@media screen and (max-width: 1100px) {
+  .search-empty__nav {
+    width: 32rem;
+    min-width: 0;
+  }
+  .search-empty__input-block input {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .search-empty__line {
+    margin-bottom: 7rem;
+  }
+  .search-empty__title {
+    font-size: 26px;
+  }
+  .search-empty__text {
+    font-size: 14px;
+    line-height: 4rem;
+  }
+  .search-empty__input-block {
+    margin-bottom: 10rem;
+  }
+  .search-empty__input-block input {
+    font-size: 14px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
