--- a/styles/main.scss
+++ b/styles/main.scss
@@ -118,7 +118,8 @@
 
 @import "../styles/components/stock";
 
-// search empty page
+// search page
 
 @import "../styles/components/search-empty";
+@import "../styles/components/search-page";
 
