fix: stock nav width

--- a/styles/main.css
+++ b/styles/main.css
@@ -9894,6 +9894,12 @@ input {
   width: 17rem;
 }
 
+@media screen and (max-width: 1100px) {
+  .stock__nav {
+    width: 24rem;
+  }
+}
+
 .search-empty__nav {
   width: 23rem;
 }
