--- a/styles/components/_registration.scss
+++ b/styles/components/_registration.scss
@@ -94,6 +94,7 @@
             width: 100%;
 
             button {
+                margin: 5rem 0;
                 width: 100%;
                 height: 45px;
                 font-size: 15px;
