--- a/styles/components/_history-diteal.scss
+++ b/styles/components/_history-diteal.scss
@@ -234,7 +234,8 @@
         }
 
         &__product--description {
-            max-width: 100%;
+            max-width: 50%;
+            background-color: aqua;
         }
     
 
