--- a/styles/main.css
+++ b/styles/main.css
@@ -5763,7 +5763,8 @@ input {
     min-height: 30rem;
   }
   .history-diteal__product--description {
-    max-width: 100%;
+    max-width: 50%;
+    background-color: aqua;
   }
   .history-diteal__product--title {
     font-size: 14px;
