--- a/styles/components/_remind-password.scss
+++ b/styles/components/_remind-password.scss
@@ -15,7 +15,7 @@
         font-weight: bold;
     }
     &__content {
-        display: flex;
+        display: none;
         flex-direction: column;
         position: relative;
         background: #fff;
@@ -26,6 +26,10 @@
         align-items: flex-start;
         justify-content: space-between;
         padding: 65px 80px;
+        &-finish {
+           display: none; 
+        }
+
         & input {
             border: 2px solid #B8B8B8;
             border-radius: 10px;
@@ -82,6 +86,7 @@
     }
     &__link-back {
         text-decoration: underline;
+        background: #FFF;
         &:hover {
             color: #10AE73;
             text-decoration: underline;
