--- a/styles/components/_remind-password.scss
+++ b/styles/components/_remind-password.scss
@@ -113,6 +113,7 @@
         overflow: visible;
         &__content {
             width: 100%;
+            height: 100%;
             min-width: 320px;
             max-width: 480px;
             padding: 34rem 2rem;
