--- a/styles/main.css
+++ b/styles/main.css
@@ -9473,6 +9473,7 @@ input {
   }
   .remind-password__content {
     width: 100%;
+    height: 100%;
     min-width: 320px;
     max-width: 480px;
     padding: 34rem 2rem;
