fix: modal window font

--- a/styles/components/_wrapper.scss
+++ b/styles/components/_wrapper.scss
@@ -1,3 +1,6 @@
+* {
+  font-family: "Nunito", sans-serif;
+}
 .wrapper {
   @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;500&display=swap");
   display: flex;
